All files added

--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/minnecoder/delivery-notes-fullstack/issues"
   },
-  "homepage": "https://github.com/minnecoder/delivery-notes-fullstack#readme"
+  "homepage": "https://github.com/minnecoder/delivery-notes-fullstack#readme",
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1"
+  }
 }
