--- a/client/package.json
+++ b/client/package.json
@@ -36,8 +36,8 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
