--- a/client/package.json
+++ b/client/package.json
@@ -39,5 +39,5 @@
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3"
   },
-  "proxy": "https://notes-fullstack-demo.herokuapp.com/"
+  "proxy": "http://localhost:4000"
 }
